2011-03-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lklex.c,
	* src/SDCCast.c: small fixes

2011-03-28 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c: fixed bug, introduced during code cleaning

2011-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCval.c,
	  src/SDCCval.h,
	  src/SDCC.y,
	  src/SDCCglue.c,
	  src/pic14/glue.c,
	  src/pic16/glue.c,
	  src/SDCCast.c:
	  Support for designated initializers, thanks C. Scott and R. Quattlebaum.

2011-03-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as6808/m08mch.c,  sdas/as6808/m08pst.c,
	* sdas/as8051/i51mch.c,  sdas/as8051/i51pst.c,
	* sdas/asgb/gbmch.c,     sdas/asgb/gbpst.c,
	* sdas/asz80/z80mch.c,   sdas/asz80/z80pst.c,
	* sdas/asxxsrc/asdata.c, sdas/asxxsrc/asexpr.c,
	* sdas/asxxsrc/aslist.c, sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/asout.c,  sdas/asxxsrc/asxxxx.h,
	* sdas/linksrc/aslink.h, sdas/linksrc/lkaomf51.c,
	* sdas/linksrc/lkar.c,   sdas/linksrc/lkarea.c,
	* sdas/linksrc/lkdata.c, sdas/linksrc/lkelf.c,
	* sdas/linksrc/lkeval.c, sdas/linksrc/lkhead.c,
	* sdas/linksrc/lkihx.c,  sdas/linksrc/lklex.c,
	* sdas/linksrc/lklib.c,  sdas/linksrc/lklibr.c,
	* sdas/linksrc/lklist.c, sdas/linksrc/lkmain.c,
	* sdas/linksrc/lkmem.c,  sdas/linksrc/lkrloc.c,
	* sdas/linksrc/lksym.c,  sdas/linksrc/lksdcclib.c: first steps towards ASxxxx 5

2011-03-27 Borut Razem <borut.razem AT gmail.com>

	* src/z80/main.c, src/z80/gen.c, src/z80/gen.h,
	  src/z80/ralloc.c, src/z80/ralloc.h,
	  src/mcs51/gen.c, src/ds390/gen.c:
	  dbuf-ized, get rid of global buffer, code cleaning
	* src/SDCCasm.c, src/SDCCasm.h:
	  removed tsprintf()
	* support/Util/dbuf.c, support/Util/dbuf.h:
	  added dbuf_is_initialized()

2011-03-26 Borut Razem <borut.razem AT gmail.com>

	* src/mcs51/gen.c, src/mcs51/gen.h,
	  src/mcs51/ralloc.c, src/mcs51/ralloc.h,
	  src/ds390/gen.c, src/ds390/ralloc.c:
	  dbuf-ized, get rid of global buffer, code cleaning
