@@ -29,8 +29,8 @@
 
 enum
 {
-  R2_IDX = 0, R3_IDX, R4_IDX, R5_IDX,
-  R6_IDX, R7_IDX, R0_IDX, R1_IDX,
+  R7_IDX = 0, R6_IDX, R5_IDX, R4_IDX,
+  R3_IDX, R2_IDX, R1_IDX, R0_IDX,
   B0_IDX, B1_IDX, B2_IDX, B3_IDX,
   B4_IDX, B5_IDX, B6_IDX, B7_IDX,
   X8_IDX, X9_IDX, X10_IDX, X11_IDX,
